--- a/FlowCrypt/src/devTest/res/navigation/nav_graph.xml
+++ b/FlowCrypt/src/devTest/res/navigation/nav_graph.xml
@@ -76,6 +76,9 @@
         <action
             android:id="@+id/action_checkPassphraseStrengthFragment_to_recheckProvidedPassphraseFragment"
             app:destination="@id/recheckProvidedPassphraseFragment" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/security/check_passphrase" />
     </fragment>
 
     <fragment
@@ -92,6 +95,9 @@
         <argument
             android:name="passphrase"
             app:argType="string" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/security/recheck_passphrase" />
     </fragment>
 
     <fragment
@@ -114,6 +120,9 @@
         <argument
             android:name="accountEntity"
             app:argType="com.flowcrypt.email.database.entity.AccountEntity" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/security/change_passphrase" />
         <action
             android:id="@+id/action_changePassphraseOfImportedKeysFragment_to_backupKeysFragment"
             app:destination="@id/backupKeysFragment"
@@ -125,6 +134,9 @@
         android:name="com.flowcrypt.email.ui.activity.fragment.ContactsListFragment"
         android:label="ContactsListFragment"
         tools:layout="@layout/fragment_contacts_list">
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/contacts" />
         <action
             android:id="@+id/action_contactsListFragment_to_publicKeyDetailsFragment"
             app:destination="@id/publicKeyDetailsFragment" />
@@ -135,6 +147,9 @@
         android:name="com.flowcrypt.email.ui.activity.fragment.PublicKeyDetailsFragment"
         android:label="PublicKeyDetailsFragment"
         tools:layout="@layout/fragment_public_key_details">
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/contacts/details" />
         <argument
             android:name="contactEntity"
             app:argType="com.flowcrypt.email.database.entity.ContactEntity" />
@@ -145,6 +160,9 @@
         android:name="com.flowcrypt.email.ui.activity.fragment.PrivateKeysListFragment"
         android:label="PrivateKeysListFragment"
         tools:layout="@layout/fragment_private_keys">
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/keys" />
         <action
             android:id="@+id/action_privateKeysListFragment_to_privateKeyDetailsFragment"
             app:destination="@id/privateKeyDetailsFragment" />
@@ -158,6 +176,9 @@
         <argument
             android:name="fingerprint"
             app:argType="string" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/keys/details" />
     </fragment>
 
     <fragment
@@ -165,12 +186,18 @@
         android:name="com.flowcrypt.email.ui.activity.fragment.AttesterSettingsFragment"
         android:label="AttesterSettingsFragment"
         tools:layout="@layout/fragment_attester_settings">
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/attester" />
     </fragment>
 
     <fragment
         android:id="@+id/notificationsSettingsFragment"
         android:name="com.flowcrypt.email.ui.activity.fragment.preferences.NotificationsSettingsFragment"
         android:label="NotificationsSettingsFragment">
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/notification" />
     </fragment>
 
     <fragment
@@ -178,6 +205,9 @@
         android:name="com.flowcrypt.email.ui.activity.fragment.LegalSettingsFragment"
         android:label="LegalSettingsFragment"
         tools:layout="@layout/fragment_legal">
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/legal" />
     </fragment>
 
     <fragment
@@ -188,6 +218,9 @@
         <action
             android:id="@+id/action_serverSettingsFragment_to_checkCredentialsFragment"
             app:destination="@id/checkCredentialsFragment" />
+        <deepLink
+            android:id="@+id/deepLinkServerSettings"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/server_settings" />
     </fragment>
 
     <fragment
@@ -226,6 +259,9 @@
         android:id="@+id/backupKeysFragment"
         android:name="com.flowcrypt.email.ui.activity.fragment.BackupKeysFragment"
         tools:layout="@layout/fragment_backup_keys">
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/make_backup" />
         <action
             android:id="@+id/action_backupKeysFragment_to_checkPassphraseStrengthFragment"
             app:destination="@id/checkPassphraseStrengthFragment" />
