--- a/FlowCrypt/src/main/res/layout/fragment_fix_empty_passphrase.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_fix_empty_passphrase.xml
@@ -64,6 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:imeOptions="actionDone"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
