Modified code to use a new logic to apply colors to recipients(chips).| #1540

--- a/FlowCrypt/src/main/res/values/colors.xml
+++ b/FlowCrypt/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="dark">#535353</color>
     <color name="black">#000000</color>
     <color name="transparent_white">#A0FFFFFF</color>
-    <color name="orange">#D18826</color>
+    <color name="orange">#C27E23</color>
     <color name="yellow">#FFEB3B</color>
     <color name="white">#FFFFFF</color>
     <color name="nobel">#B7B7B7</color>
