--- a/FlowCrypt/src/main/res/layout/fragment_parse_and_save_pub_keys.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_parse_and_save_pub_keys.xml
@@ -14,13 +14,13 @@
         android:id="@+id/tVProgressTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/parsing_public_keys"
         app:layout_constraintBottom_toTopOf="@+id/pB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:text="@string/parsing_public_keys" />
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <ProgressBar
         android:id="@+id/pB"
