Fixed opening PublicKeyDetailsFragment. Refactored code.| #1566

--- a/FlowCrypt/src/main/res/navigation/nav_graph.xml
+++ b/FlowCrypt/src/main/res/navigation/nav_graph.xml
@@ -154,6 +154,9 @@
         <argument
             android:name="recipientEntity"
             app:argType="com.flowcrypt.email.database.entity.RecipientEntity" />
+        <argument
+            android:name="publicKeyEntity"
+            app:argType="com.flowcrypt.email.database.entity.PublicKeyEntity" />
     </fragment>
 
     <fragment
