Fixed nav_graph.xml for test.| #1188

--- a/FlowCrypt/src/devTest/res/navigation/nav_graph.xml
+++ b/FlowCrypt/src/devTest/res/navigation/nav_graph.xml
@@ -138,8 +138,24 @@
             android:id="@+id/deepLink"
             app:uri="flowcrypt://email.flowcrypt.com/settings/contacts" />
         <action
-            android:id="@+id/action_recipientsListFragment_to_publicKeyDetailsFragment"
+            android:id="@+id/action_recipientsListFragment_to_importRecipientsFromSourceFragment"
+            app:destination="@id/importRecipientsFromSourceFragment" />
+        <action
+            android:id="@+id/action_recipientsListFragment_to_recipientDetailsFragment"
+            app:destination="@id/recipientDetailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/recipientDetailsFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.RecipientDetailsFragment"
+        android:label="RecipientDetailsFragment"
+        tools:layout="@layout/fragment_recipient_details">
+        <action
+            android:id="@+id/action_recipientDetailsFragment_to_publicKeyDetailsFragment"
             app:destination="@id/publicKeyDetailsFragment" />
+        <argument
+            android:name="recipientEntity"
+            app:argType="com.flowcrypt.email.database.entity.RecipientEntity" />
     </fragment>
 
     <fragment
@@ -153,6 +169,9 @@
         <argument
             android:name="recipientEntity"
             app:argType="com.flowcrypt.email.database.entity.RecipientEntity" />
+        <argument
+            android:name="publicKeyEntity"
+            app:argType="com.flowcrypt.email.database.entity.PublicKeyEntity" />
     </fragment>
 
     <fragment
@@ -280,9 +299,39 @@
     </fragment>
 
     <fragment
+        android:id="@+id/importRecipientsFromSourceFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.ImportRecipientsFromSourceFragment"
+        android:label="ImportRecipientsFromSourceFragment"
+        tools:layout="@layout/fragment_import_recipients_from_source">
+        <action
+            android:id="@+id/action_importRecipientsFromSourceFragment_to_parseAndSavePubKeysFragment"
+            app:destination="@id/parseAndSavePubKeysFragment" />
+    </fragment>
+
+    <fragment
         android:id="@+id/mainDevPreferencesFragment"
         android:name="com.flowcrypt.email.ui.activity.fragment.preferences.MainDevPreferencesFragment"
         android:label="MainDevPreferencesFragment" />
+
+    <fragment
+        android:id="@+id/parseAndSavePubKeysFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.ParseAndSavePubKeysFragment"
+        android:label="ParseAndSavePubKeysFragment"
+        tools:layout="@layout/fragment_parse_and_save_pub_keys">
+        <argument
+            android:name="source"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="uri"
+            android:defaultValue="@null"
+            app:argType="android.net.Uri"
+            app:nullable="true" />
+        <action
+            android:id="@+id/action_parseAndSavePubKeysFragment_to_importAllPubKeysFromSourceDialogFragment"
+            app:destination="@id/importAllPubKeysFromSourceDialogFragment" />
+    </fragment>
 
     <dialog
         android:id="@+id/twoWayDialogFragment"
@@ -385,6 +434,32 @@
             app:argType="com.flowcrypt.email.ui.activity.fragment.dialog.FixNeedPassphraseIssueDialogFragment$LogicType" />
     </dialog>
 
+    <dialog
+        android:id="@+id/lookUpPubKeysDialogFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.dialog.LookUpPubKeysDialogFragment"
+        android:label="LookUpPubKeyDialogFragment"
+        tools:layout="@layout/fragment_look_up_pub_keys">
+        <argument
+            android:name="keyIdOrEmail"
+            app:argType="string" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/findKeysInClipboardDialogFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.dialog.FindKeysInClipboardDialogFragment"
+        android:label="FindKeysInClipboardDialogFragment"
+        tools:layout="@layout/fragment_find_keys_in_clipboard">
+        <argument
+            android:name="isPrivateKeyMode"
+            app:argType="boolean" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/importAllPubKeysFromSourceDialogFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.dialog.ImportAllPubKeysFromSourceDialogFragment"
+        android:label="ImportAllPubKeysFromSourceDialogFragment"
+        tools:layout="@layout/fragment_import_all_pub_keys_from_source" />
+
     <action
         android:id="@+id/action_global_twoWayDialogFragment"
         app:destination="@id/twoWayDialogFragment" />
@@ -394,4 +469,10 @@
     <action
         android:id="@+id/action_global_fixNeedPassphraseIssueDialogFragment"
         app:destination="@id/fixNeedPassphraseIssueDialogFragment" />
+    <action
+        android:id="@+id/action_global_lookUpPubKeysDialogFragment"
+        app:destination="@id/lookUpPubKeysDialogFragment" />
+    <action
+        android:id="@+id/action_global_findKeysInClipboardDialogFragment"
+        app:destination="@id/findKeysInClipboardDialogFragment" />
 </navigation>
