Fixed some PR comments. Refactored code.| #1188

--- a/FlowCrypt/src/devTest/res/navigation/nav_graph.xml
+++ b/FlowCrypt/src/devTest/res/navigation/nav_graph.xml
@@ -446,7 +446,7 @@
         android:label="LookUpPubKeyDialogFragment"
         tools:layout="@layout/fragment_look_up_pub_keys">
         <argument
-            android:name="keyIdOrEmail"
+            android:name="email"
             app:argType="string" />
     </dialog>
 
