--- a/FlowCrypt/src/main/res/layout/message_part_public_key.xml
+++ b/FlowCrypt/src/main/res/layout/message_part_public_key.xml
@@ -63,6 +63,18 @@
         tools:text="-----BEGIN PGP PUBLIC KEY-----\nxxxxx\nxxxxx\nxxxxx\nxxxxx\nxxxxx\nxxxxx\nxxxxx\n-----END PGP PUBLIC KEY-----"
         tools:visibility="visible" />
 
+    <TextView
+        android:id="@+id/textViewAlreadyImported"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center|end"
+        android:text="@string/already_imported"
+        android:textColor="@color/colorPrimary"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/textViewFingerprintTemplate"
+        app:layout_constraintStart_toStartOf="@+id/textViewFingerprintTemplate"
+        app:layout_constraintTop_toBottomOf="@+id/textViewPgpPublicKey" />
+
     <Button
         android:id="@+id/buttonKeyAction"
         style="@style/AppWidget.Button"
@@ -73,9 +85,8 @@
         android:theme="@style/AppWidget.Button.Green"
         app:layout_constraintEnd_toEndOf="@+id/textViewFingerprintTemplate"
         app:layout_constraintStart_toStartOf="@+id/textViewFingerprintTemplate"
-        app:layout_constraintTop_toBottomOf="@+id/textViewPgpPublicKey"
-        tools:text="@string/save_contact"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewAlreadyImported"
+        tools:text="@string/import_pub_key" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineRight"
